# DEF-W9-28_SU-YOLO

./: ASSETS.md  CLAUDE.md  Dockerfile.serve  GATE_REPORT.md  NEXT_STEPS.md  PRD.md  anima_module.yaml  docker-compose.serve.yml  pyproject.toml
configs/: debug.toml  default.toml  paper.toml
papers/: 2503.24389.txt
prds/: PRD-01-foundation.md  PRD-02-core-model.md  PRD-03-inference.md  PRD-04-evaluation.md  PRD-05-api-docker.md  PRD-06-ros2-integration.md  PRD-07-production.md  README.md
repositories/snn-underwater/: train.py  val.py
repositories/snn-underwater/utils/: torch_utils.py
scripts/: evaluate.py  export.py  find_batch_size.py  infer.py  preflight.py  smoke_local.py  train.py
src/anima_su_yolo/: __init__.py  commands.py  config.py  evaluate.py  export.py  infer.py  preflight.py  serve.py  train.py
tasks/: INDEX.md  PRD-0101.md  PRD-0102.md  PRD-0103.md  PRD-0201.md  PRD-0202.md  PRD-0301.md  PRD-0302.md  PRD-0401.md  PRD-0402.md  PRD-0501.md  PRD-0502.md  PRD-0601.md  PRD-0701.md  PRD-0702.md
tests/: test_commands.py  test_config.py  test_preflight.py
