[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "anima-su-yolo"
version = "0.1.0"
description = "ANIMA SU-YOLO lifecycle scaffolding and orchestration"
requires-python = ">=3.11"
readme = "CLAUDE.md"
authors = [
  { name = "RobotFlow Labs" }
]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
